@@ -1,14 +1,14 @@
 package com.bintoufha.gestionStocks.services.Impl;
 
-import com.bintoufha.gestionStocks.dto.CategoriesDto;
-import com.bintoufha.gestionStocks.dto.ClientsDto;
+import com.bintoufha.gestionStocks.dto.categorie.CategorieListDto;
+import com.bintoufha.gestionStocks.dto.categorie.CategorieSaveDto;
 import com.bintoufha.gestionStocks.exception.EntityNoFoundException;
 import com.bintoufha.gestionStocks.exception.ErrorCodes;
 import com.bintoufha.gestionStocks.exception.InvalEntityException;
 import com.bintoufha.gestionStocks.exception.InvalidOperationException;
+import com.bintoufha.gestionStocks.mapper.CategorieMapper;
 import com.bintoufha.gestionStocks.model.Articles;
 import com.bintoufha.gestionStocks.model.Categories;
-import com.bintoufha.gestionStocks.model.Clients;
 import com.bintoufha.gestionStocks.repository.ArticleRepository;
 import com.bintoufha.gestionStocks.repository.CategorieRepository;
 import com.bintoufha.gestionStocks.services.CategorieService;
@@ -19,9 +19,7 @@ import org.springframework.boot.web.servlet.error.DefaultErrorAttributes;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -34,53 +32,64 @@ public class CategorieServiceImpl implements CategorieService {
     @Autowired
     public CategorieServiceImpl(
             CategorieRepository categorieRepository, DefaultErrorAttributes errorAttributes, ArticleRepository articleRepository
-    ){
+    ) {
         this.categorieRepository = categorieRepository;
         this.articleRepository = articleRepository;
         this.errorAttributes = new DefaultErrorAttributes();
     }
 
     @Override
-    public CategoriesDto save(CategoriesDto dto) {
+    public CategorieSaveDto save(CategorieSaveDto dto) {
         List<String> errors = CategorieValidator.validate(dto);
-        if (!errors.isEmpty()){
-            log.error("Cette categorie est invalide",dto);
+        if (!errors.isEmpty()) {
+            log.error("Cette categorie est invalide", dto);
             throw new InvalEntityException(
-                    "cette categorie est invalide", ErrorCodes.CATEGORY_NOT_VALID,errors);
+                    "cette categorie est invalide", ErrorCodes.CATEGORY_NOT_VALID, errors);
         }
-        return CategoriesDto.fromEntity(
-                categorieRepository.save(CategoriesDto.toEntity(dto))
-        );
+
+        // 3️⃣ Mapper DTO → Entity
+        Categories categorie = CategorieMapper.toEntity(dto);
+
+        // 4️⃣ Sauvegarder
+        Categories saved = categorieRepository.save(categorie);
+
+        // 5️⃣ Retourner DTO propre
+        return CategorieMapper.toSaveDto(saved);
 
     }
 
     @Override
-    public CategoriesDto findByUuid(UUID uuid) {
-        if(uuid == null){
-            log.error("identifiant est null");
-            return null;
+    public CategorieListDto findByUuid(UUID uuid) {
+        if (uuid == null) {
+            log.error("Identifiant article est introuvable");
+            throw new IllegalArgumentException("UUID de l'article ne peut pas être null");
         }
 
-        Optional<Categories> categories = categorieRepository.findByUuid(uuid);
-
-        return categories
-                .map(CategoriesDto::fromEntity)
+        // Récupération de la categorie ou exception si non trouvé
+        Categories categories = categorieRepository.findByUuid(uuid)
                 .orElseThrow(() -> new EntityNoFoundException(
-                        "la categorie avec identifiant : " + uuid + "n'existe pas dans la base de donnee",
+                        "Aucun article avec uuid " + uuid + " n'a été trouvé",
                         ErrorCodes.CATEGORY_NOT_FOUND
                 ));
+
+        // Transformation en DTO pour exposer uniquement les données nécessaires
+        return CategorieMapper.toListDto(categories);
     }
 
     @Override
-    public CategoriesDto findByCode(String code) {
+    public CategorieListDto findByCode(String code) {
         return null;
     }
 
     @Override
-    public List<CategoriesDto> findAll() {
-        return categorieRepository.findAll().stream()
-                .map(CategoriesDto::fromEntity)
-                .collect(Collectors.toList());
+    public List<CategorieListDto> findAll() {
+        return categorieRepository.findAll()
+                .stream()
+                .map(categories -> {
+                    // ou via TarificationService si besoin
+                    return CategorieMapper.toListDto(categories);
+                })
+                .toList();
     }
 
     @Override
